[package]
name = "json_env"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description ="`json_env` loads an environment variables from a file called `.env.json` in the current directory and starts a subprocess with them."
homepage = "https://github.com/brodo/json_env"
repository = "https://github.com/brodo/json_env.git"
readme = "Readme.md"
categories = ["command-line-utilities", "development-tools"]
tags = ["env", "dotenv", "direnv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0.62"
