[package]
name = "json_env"
version = "1.1.6"
edition = "2021"
license = "Apache-2.0"
description ="`json_env` loads an environment variables from a file called `.env.json` in the current directory and starts a subprocess with them."
homepage = "https://github.com/brodo/json_env"
repository = "https://github.com/brodo/json_env.git"
readme = "Readme.md"
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "json_env"
path = "src/main.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0.62"
