[package]
name = "json_env"
version = "1.3.0"
edition = "2021"
license = "Apache-2.0"
description ="Loads an environment variables from JSON files (`.env.json` per default) and starts a subprocess with them."
homepage = "https://github.com/brodo/json_env"
repository = "https://github.com/brodo/json_env.git"
readme = "Readme.md"
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "json_env"
path = "src/main.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0.62"
clap = { version = "4.0.8", features = ["derive"] }
jsonpath-rust = "0.2.0"
dirs = "4.0.0"
dialoguer = "0.10.2"